type: <fix> action: <prevent overflow only need width 100vw position relative, not height 100vh>

--- a/about/about.scss
+++ b/about/about.scss
@@ -46,7 +46,7 @@ h1 {
 @media screen and (max-width: 768px) {
   body {
     position: relative;
-    min-height: 100vh;
+    min-height: 100vh !important;
   }
 
   h1 {
