--- a/cv/cv.css
+++ b/cv/cv.css
@@ -27,7 +27,6 @@
 @media screen and (max-width: 768px) {
   body {
     width: 100vw;
-    height: 100vh;
     position: relative;
   }
   .nav-bar {
