--- a/style/header.scss
+++ b/style/header.scss
@@ -21,7 +21,6 @@
 @media screen and (max-width: 768px) {
   body {
     width: 100vw;
-    height: 100vh;
     position: relative;
   }
 
